<resources>

    <!-- Textos para el ToolBar Menu -->
    <string name="msg_toolbar_ayuda">Ayuda</string>
    <string name="msg_toolbar_notificaciones">Notificaciones</string>
    <!-- Fin para textos para el ToolBar Menu -->


    <!-- Textos para el Login -->
    <string name="msg_title_login">¡Bienvenido %s!</string>
    <string name="msg_subtitle_login">Por favor ingrese tu contraseña</string>
    <string name="msg_clear"> a </string>
    <string name="msg_hint_user_login">Usuario</string>
    <string name="msg_hint_password_login">Contraseña</string>
    <string name="msg_button_login">Siguiente</string>
    <string name="msg_forget_login">
        <u>Olvide mi contraseña</u>
    </string>
    <!-- Fin para textos para el Login -->

    <!-- Textos para el Enrolamiento -->
    <string name="msg_title_enrolamiento">¡Hola!</string>
    <string name="msg_subtitle_enrolamiento">Este es tu nueva aplicación\npensada y diseñada para ti,\npara facilitar
        tus labores\nde tu día a día
    </string>
    <string name="msg_title_qr_enrolamiento">Para poder iniciar es\nnecesario ingresar el\ncódigo QR que te
        fue\nasignado por e-mail
    </string>
    <string name="msg_title_name_enrolamiento">¡Bienvenido \n%s!</string>
    <string name="msg_subtitle_create_pass_enrolamiento">Es necesario que ingreses\nuna nueva contraseña</string>
    <string name="msg_title_name_create_pass_enrolamiento">¡Bienvenido %s!</string>
    <string name="msg_hint_create_password">Escribe tu nueva contraseña</string>
    <string name="msg_hint_repeat_password">Confirma tu contraseña</string>
    <string name="msg_title_success_pass_enrolamiento">Registro exitoso</string>
    <string name="msg_error_create_pass">Por favor ingrese una nueva contraseña para poder avanzar</string>
    <string name="msg_error_repeat_pass">Por favor ingrese de nuevo su contraseña</string>
    <!-- Fin para textos para el Enrolamiento -->

    <!-- Textos para el Drawer Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_drawer_menu_title">Hola Jesús</string>
    <string name="msg_drawer_menu_subtitle">Nivel Oro</string>
    <string name="msg_drawer_menu_mis_pendientes">Mis pendientes</string>
    <string name="msg_drawer_menu_region">Mi región</string>
    <string name="msg_drawer_menu_home">Inicio</string>
    <string name="msg_drawer_menu_inventario">Inventario</string>
    <string name="msg_drawer_menu_formatos">Formatos</string>
    <string name="msg_drawer_menu_expedientes">Expedientes</string>
    <string name="msg_drawer_menu_facturas">Facturas</string>
    <string name="msg_drawer_menu_asigar_herramienta">Asignar herramienta</string>
    <string name="msg_drawer_menu_cobrar_herramienta">Cobrar Herramienta</string>
    <string name="msg_drawer_menu_comunicados">Comunicados</string>
    <string name="msg_drawer_menu_capacitaciones">Capacitaciones</string>
    <string name="msg_drawer_menu_envios">Envíos</string>
    <string name="msg_drawer_menu_ayuda">Ayuda</string>
    <string name="msg_drawer_menu_cerrar_sesion">Cerrar sesión</string>
    <!-- Fin para Textos para el Drawer Menu -->

    <!-- Textos para el Home o DashBoard -->
    <string name="msg_dash_board_header_title">JH Nivel Oro</string>
    <string name="msg_dash_board_header_subtitle">Meta del Negocio</string>
    <string name="msg_dash_board_button">Mis resultados</string>
    <!-- CardView && GridView -->
    <string name="msg_dashboard_herramientas_title">Herramientas</string>
    <string name="msg_dashboard_cobrar_herramienta_title">Cobrar\nHerramienta</string>
    <string name="msg_dashboard_asignar_herramienta_title">Trasnferencia de\nherramientas</string>
    <string name="msg_dashboard_levantar_inventario_title">Levantar\ninventario</string>
    <string name="msg_dashboard_dar_de_baja_title">Dar de baja</string>
    <string name="msg_dashboard_integrar_expediente">Integrar\nexpediente</string>
    <string name="msg_dashboard_integrar_expediente_title">Integrar expediente</string>
    <!-- Fin para textos del Home o DashBoard -->


    <!-- SearchView -->
    <string name="msg_search_view_respuesta">Escribe tu búsqueda aquí</string>
    <string name="msg_search_employee_instruction">Escribe el número de socio a quien desees transferir la herramienta</string>
    <plurals name="msg_step_search_employee">
        <item quantity="one">Escribe el número de socio a quien desees transferir la herramienta</item>
        <item quantity="other">Escribe el número de socio a quien desees transferir las herramientas</item>
    </plurals>
    <string name="msg_search_employee">Socio</string>
    <string name="msg_employee_with_tools">El socio actualmente ya cuenta con herramientas operativas necesitas gestionarlas para continuar</string>
    <string name="msg_manage_tools_instrunction">Gestiona las herramientas operativas del GCR</string>
    <string name="msg_employee_found_as">El socio encontrado es: %s\n¿Deseas continuar con la asignación?</string>
    <!-- Fin SearchView -->


    <!-- Textos para el C4 Ayuda -->
    <string name="msg_title_c4_ayuda">C4 Ayuda</string>
    <string name="msg_subtitle_c4_ayuda">¡Llamar al C4\ntengo un problema!</string>
    <string name="msg_leer_mas_c4">Leer más...</string>
    <!-- Fin de textos para el C4 Ayuda -->


    <!-- Textos para Notificaciones -->
    <string name="msg_title_notificaciones">Notificaciones</string>
    <string name="msg_leer_mas_notificaciones">Leer más...</string>
    <!-- Fin de textos para Notificaciones -->


    <!-- Textos para Resultados -->
    <string name="msg_title_results">Hello blank Results</string>
    <!-- Fin de textos para Resultados -->


    <!-- Textos para Cobrar herramienta -->
    <string name="msg_title_charge_tool">Bienvenido al Sistema\nde cobro de Herramientas\na Empleados</string>
    <string name="msg_subtitle_charge_tool">Verifica que todos los datos que te aparezcan son correctos</string>
    <string name="msg_button_charge_tool">Consultar</string>
    <string name="msg_ayuda_charge_tool">¡Algo anda mal, ayuda!</string>
    <!-- Fin de textos para Cobrar herramienta  -->


    <!-- Transferencia de Herramientas-->
    <string name="title_tools_flow">Transferencia de Herramientas</string>
    <string name="msg_hint_empleado">Número de empleado</string>
    <string name="msg_button_asignar">Asignar</string>
    <string name="msg_button_agregar">Agregar herramienta</string>
    <string name="msg_add_tool">Xiaomi Note 7</string>
    <string name="msg_empty_employee">¡No has agregado un número de empleado!</string>
    <string name="msg_assigment_instruction">Selecciona o escanea otra herramienta para elegir una acción</string>
    <string name="msg_scann_instruction">Escanea las herramientas que desees transferir</string>
    <string name="msg_gestion_tool">Gestiona las herramientas operativas del GCR</string>
    <string name="msg_assigned_tools">Herramientas asignadas</string>
    <string name="msg_new_employee">Nuevo Empleado</string>
    <string name="msg_custody_tool">Estas recibiendo las herramientas de %s, con ello aceptas que recibes funcionando y en buenas condiciones las herramientas con todos sus accesorios</string>
    <string name="msg_success_custody">Custodia exitosa</string>
    <string name="msg_operational">Operativa</string>
    <string name="msg_available">Disponible</string>
    <string name="msg_serial_number">(%s)</string>

    <!-- TOOLS ACTION -->
    <string name="msg_custody">Custodia</string>
    <string name="msg_damage_charge">Cobro por daño</string>
    <string name="msg_incident">Incidente</string>
    <string name="msg_factory_defect">Defecto fábrica</string>
    <string name="msg_end_of_useful_life">Fin de vida útil</string>

    <!-- Fin  -->

    <!-- Textos para Levantar inventario -->
    <string name="msg_title_lift_inventory">Hello blank Lift Inventory</string>
    <!-- Fin de textos para Levantar inventario -->


    <!-- Textos para Dar de baja herramienta -->
    <string name="msg_title_lift_unsubscribe_tool">Hello blank Unsubscribe Tool</string>
    <!-- Fin de textos para Dar de baja herramienta  -->


    <!-- Textos para Integrar expediente -->
    <string name="msg_title_integrate_file">Hello blank Integrate File</string>
    <!-- Fin de textos para Integrar expediente  -->


    <!-- Textos para Resultados -->
    <string name="msg_results_header_title">JH Nivel Oro</string>
    <string name="msg_cardview_meta_mensual_title">Mi meta MENSUAL</string>
    <string name="msg_cardview_desempeño_mensual_title">Mi desempeño MENSUAL</string>
    <string name="msg_progress_circle_one_title">Habilitaciones</string>
    <string name="msg_progress_circle_two_title">Inventario</string>
    <string name="msg_progress_circle_one_result">65%</string>
    <string name="msg_progress_circle_two_result">15%</string>
    <string name="msg_cardview_habilitaciones_mensual_title">Habilitaciones 15/04/20</string>

    <!-- Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pressbackagain">Presiona de nuevo atrás para salir</string>
    <!-- Fin de textos para Resultados  -->

    <!-- Textos para escanear codigo QR asignacion -->
    <string name="msg_title_asignacion_camara">Escanea la herramienta</string>
    <!-- Fin de testos para escanear código QR asignación -->

    <!-- GENERAL MESSAGES -->
    <string name="msg_confirm">Confirmar</string>
    <string name="msg_continue">Continuar</string>
    <string name="msg_return_back">Regresar</string>
    <string name="msg_ok">Aceptar</string>
    <string name="msg_search">Buscar</string>
    <string name="msg_delete">Eliminar</string>
    <string name="msg_loading_server">Espera un momento\nProcesando información</string>

</resources>
