<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clSearching"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="413dp"
        android:layout_height="94dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvInstructions"
                android:layout_width="376dp"
                android:layout_height="83dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/colorWhite"
                android:fontFamily="@font/montserrat_regular"
                android:lineSpacingExtra="3.2sp"
                android:paddingStart="20dp"
                android:paddingTop="18dp"
                android:paddingEnd="20dp"
                android:text="@string/msg_search_employee_instruction"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/svEmployeeNumber"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:alwaysDrawnWithCache="true"
        android:background="@drawable/shape_line"
        android:digits="1234567890"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/colorAccent"
        android:ellipsize="start"
        android:textColor="@color/textcolorTitleTool"
        android:textSize="16sp"
        android:hint="@string/msg_search_employee"
        android:inputType="number"
        android:layoutDirection="rtl"
        android:maxLength="8"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textAlignment="textStart"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textDirection="ltr"
        android:windowSoftInputMode="stateAlwaysHidden"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/ButtonComfirmToolDisable"
        android:layout_width="331dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_tool_function"
        android:enabled="false"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:shadowRadius="5.0"
        android:text="@string/msg_search"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>