<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/clTools"
    tools:context="com.simaht.modules.dashboard_mh.tools.searchemployee.view.SerachEmployeekFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvInstructions"
        android:layout_width="325dp"
        android:layout_height="63dp"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="3.2sp"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:text="@string/msg_scann_instruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Escribe el nombre o el número del socio  para consultar sus herramientas asignadas" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/svEmployeeNumber"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:textAlignment="textStart"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layoutDirection="ltr"
        android:hint="@string/msg_search_employee"
        android:maxLength="8"
        android:background="@drawable/shape_line"
        android:alwaysDrawnWithCache="true"
        android:visibility="gone"
        android:drawableStart="@drawable/ic_search"
        android:drawableTint="@color/colorAccent"
        android:inputType="number"
        android:digits="1234567890"
        android:ellipsize="start"
        android:windowSoftInputMode="stateAlwaysHidden"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="@id/tvInstructions"
        app:layout_constraintStart_toStartOf="@id/tvInstructions"
        app:layout_constraintTop_toBottomOf="@id/tvInstructions"
        tools:visibility="visible" />

    <!--<include-->
        <!--android:id="@+id/employeInfo"-->
        <!--layout="@layout/item_employee_full_info"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--android:visibility="visible"-->

        <!--app:layout_constraintTop_toBottomOf="@id/svEmployeeNumber" />-->

    <RelativeLayout
        android:id="@+id/rlEmployeeInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/svEmployeeNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/employeeFace"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="30dp"
            android:layout_alignParentLeft="true"
            android:background="@color/colorWhite"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/employeeName"
            style="@style/TextAppearance.AppCompat"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:maxLines="2"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/text_header_size"
            android:textColor="@color/textColor"
            android:layout_toRightOf="@id/employeeFace"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/employeeAbstract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/employeeName"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxLines="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_topic_size"
            android:layout_toRightOf="@id/employeeFace"
            tools:text="12345 - GCC" />

        <TextView
            android:id="@+id/newEmployee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/employeeAbstract"
            android:textSize="@dimen/text_topic_size"
            android:textColor="@color/newEmployee"
            android:layout_below="@id/employeeName"
            android:visibility="gone"
            tools:text="@string/msg_new_employee"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/tvLeyend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:textSize="19sp"
            android:textColor="@color/gunmetal"
            android:layout_below="@id/employeeAbstract"
            android:text="@string/msg_assigned_tools"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="12dp"
            android:visibility="gone"
            android:tint="@color/available"
            android:src="@drawable/ic_filter_option"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/employeeAbstract"/>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/containerAssignation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@color/available"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlEmployeeInfo" >

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnAddTool"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="6dp"
        style="@style/ButtonComfirmToolDisable"
        android:background="@drawable/shape_button_comfirm_tool"
        android:enabled="false"
        android:visibility="gone"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:shadowRadius="5.0"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/ic_sign_to_add_2"
        app:tint="@color/available"
        app:layout_constraintTop_toTopOf="@id/btnContinue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clProcesFinshed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/yellow_success"
            app:layout_constraintBottom_toTopOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/msg_success_custody"
            android:textColor="@color/available"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/ButtonComfirmToolDisable"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/selector_tool_function"
        android:enabled="false"
        android:fontFamily="@font/montserrat_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:shadowRadius="5.0"
        android:text="@string/msg_continue"
        android:textColor="@color/blocked"
        android:textAllCaps="false"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnAddTool"
        app:layout_goneMarginStart="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
